--- a/remove_interviewer.ipynb
+++ b/remove_interviewer.ipynb
@@ -670,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -678,6 +678,7 @@
     "\n",
     "def tag_speaker(input_path):\n",
     "    doc = Document(input_path)\n",
+    "\n",
     "    text = [para.text for para in doc.paragraphs if para.text.strip()]\n",
     "    \n",
     "    dialog = []\n",
@@ -687,6 +688,9 @@
     "        if line.startswith(\"Interviewer:\"):\n",
     "            current_speaker = \"Interviewer\"\n",
     "            dialog.append((\"Interviewer\",line.replace(\"Interviewer:\",\"\").strip()))\n",
+    "        elif line.startswith(\"Allison S:\"):\n",
+    "            current_speaker = \"Interviewer\"\n",
+    "            dialog.append((\"Interviewer\",line.replace(\"Allison S:\",\"\").strip()))    \n",
     "        elif re.match(r\"Participant \\d+:\", line):\n",
     "            current_speaker = \"Participant\"\n",
     "            participant_label = re.match(r\"(Participant \\d+):\", line).group(1)\n",
@@ -702,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -737,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
